--- a/css/styles.css
+++ b/css/styles.css
@@ -1985,6 +1985,19 @@ p {
     text-align: right;
 }
 
+/* Fix visibility inside bubbles */
+.message-bubble p,
+.message-bubble ul,
+.message-bubble li {
+    color: inherit;
+    margin-bottom: 0;
+}
+
+.message-bubble.user strong {
+    color: white;
+    text-decoration: underline;
+}
+
 .message-bubble.user .message-time {
     color: rgba(255, 255, 255, 0.9);
 }
